hub/route.yml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: otel-gateway-route
  namespace: opentelemetry
spec:
  host: otel-gateway.prospecta.com
  to:
    kind: Service
    name: otel-gateway-collector
    weight: 100
  port:
    targetPort: otlp-grpc
  tls:
    termination: passthrough
    insecureEdgeTerminationPolicy: None
  wildcardPolicy: None
